--- a/.github/workflows/profile-summary-cards.yml
+++ b/.github/workflows/profile-summary-cards.yml
@@ -3,7 +3,7 @@ name: GitHub-Profile-Summary-Cards
 on:
   create:
   schedule: # execute every 24 hours
-    - cron: "* */24 * * *"
+    - cron: "* */12 * * *"
   workflow_dispatch:
 
 jobs:
@@ -17,6 +17,6 @@ build:
     - uses: actions/checkout@v2
     - uses: vn7n24fzkq/github-profile-summary-cards@release
       env:
-        GITHUB_TOKEN: ${{ secrets.[PROFILE-SUMMARY-CARDS] }}
+        GITHUB_TOKEN: ${{ secrets.[PROFILE_SUMMARY_CARDS] }}
       with:
         USERNAME: ${{ github.repository_owner }}
