--- a/.github/workflows/profile-summary-cards.yml
+++ b/.github/workflows/profile-summary-cards.yml
@@ -17,6 +17,6 @@ build:
     - uses: actions/checkout@v2
     - uses: vn7n24fzkq/github-profile-summary-cards@release
       env:
-        GITHUB_TOKEN: ${{ secrets.[PROFILE_SUMMARY_CARDS] }}
+        GITHUB_TOKEN: ${{ secrets.PROFILE_SUMMARY_CARDS }}
       with:
         USERNAME: ${{ github.repository_owner }}
