--- a/.github/workflows/profile-summary-cards.yml
+++ b/.github/workflows/profile-summary-cards.yml
@@ -1,22 +1,22 @@
 name: GitHub-Profile-Summary-Cards
 
 on:
-  create:
-  schedule: # execute every 24 hours
-    - cron: "* */12 * * *"
+  schedule: # Executa a cada 12 horas
+    - cron: "0 */12 * * *"
   workflow_dispatch:
 
 jobs:
-build:
-  runs-on: ubuntu-latest
-  name: generate-github-cards
-  permissions:
-    contents: write
+  build:
+    runs-on: ubuntu-latest
+    name: generate-github-cards
+    permissions:
+      contents: write
 
-  steps:
-    - uses: actions/checkout@v2
-    - uses: vn7n24fzkq/github-profile-summary-cards@release
-      env:
-        GITHUB_TOKEN: ${{ secrets.PROFILE_SUMMARY_CARDS }}
-      with:
-        USERNAME: ${{ github.repository_owner }}
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: vn7n24fzkq/github-profile-summary-cards@release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Alterar para o GITHUB_TOKEN padrão
+        with:
+          USERNAME: ${{ github.repository_owner }}
