--- a/.github/workflows/profile-summary-cards.yml
+++ b/.github/workflows/profile-summary-cards.yml
@@ -17,6 +17,6 @@ jobs:
 
       - uses: vn7n24fzkq/github-profile-summary-cards@release
         env:
-          GITHUB_TOKEN: ${{ secrets.PROFILE_SUMMARY_CARDS }} # Alterar para o GITHUB_TOKEN padrão
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Alterar para o GITHUB_TOKEN padrão
         with:
           USERNAME: ${{ github.repository_owner }}
